Added type schema -Moved type definition in error schema to an external file -added search in rpc schema for defined types -updated test cases